Fix bug: 100vw widths to 100% to avoid horizontal scrollbar
Previously a horizontal scrollbar appeared because "100vw" width does not account for when a vertical scrollbar appears, constraining the width and causing a horizontal one to appear as well

--- a/frontend/src/components/Footer.module.scss
+++ b/frontend/src/components/Footer.module.scss
@@ -3,7 +3,7 @@
 .footer {
   background: $COLOR_BLACK100;
   position: relative;
-  width: 100vw;
+  width: 100%;
   padding: 140px;
   @include landing-content-padding;
   display: flex;
