--- a/frontend/src/pages/LandingPage.module.scss
+++ b/frontend/src/pages/LandingPage.module.scss
@@ -10,13 +10,13 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 1025px;
     border: 0px;
   }
   display: grid;
 
-  width: 100vw;
+  width: 100%;
   grid-template-rows: 1fr auto auto;
 
   position: relative;
@@ -179,7 +179,7 @@
 .contact {
   background: $COLOR_BLACK10;
   position: relative;
-  width: 100vw;
+  width: 100%;
   min-height: 320px;
   text-align: center;
 
@@ -209,7 +209,7 @@
 .login {
   background: $COLOR_EMERALD;
   position: relative;
-  width: 100vw;
+  width: 100%;
   min-height: 402px;
   text-align: center;
   color: white;
